Set up build process

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script type="module" src="src/quotedaily.js"></script>
+    <script type="module" src="dist/main.js"></script>
     <div id="quote"></div>
 </body>
 </html>
