Refactor request and present author

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <script type="module" src="dist/main.js"></script>
     <div id="quote"></div>
+    <div id="author"></div>
 </body>
 </html>
