--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
     <script type="module" src="dist/main.js"></script>
+    <div id="day"></div>
+    <div id="date"></div>
     <div id="quote"></div>
     <div id="author"></div>
 </body>
