--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/style.css">
     <title>Quotedaily</title>
 </head>
 
 <body>
     <script type="module" src="dist/main.js"></script>
-    <div id="day"></div>
-    <div id="date"></div>
-    <div id="quote"></div>
-    <div id="author"></div>
+    <div class="content">
+        <h1>Quotedaily</h1>
+        <div id="date" class="date"></div>
+        <div>
+            <p id="quote" class="quote"></p>
+            <div id="author" class="author"></div>
+        </div>
+    </div>
 </body>
 </html>
