--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body>
     <script type="module" src="dist/main.js"></script>
     <div class="content">
-        <h1>Quotedaily</h1>
+        <h1>
+            Quotedaily
+            <div class="speech-bubble"></div>
+        </h1>
         <div id="date" class="date"></div>
         <div>
             <p id="quote" class="quote"></p>
