--- a/index.html
+++ b/index.html
@@ -21,5 +21,20 @@
             <div id="author" class="author"></div>
         </div>
     </div>
+    <script>
+        import { initializeApp } from "firebase/app";
+        import { getAnalytics } from "firebase/analytics";
+        const firebaseConfig = {
+        apiKey: "AIzaSyA2UTUsENZYy-Unuf7TirzcfPmDRsQJ93w",
+        authDomain: "quotedaily-9e1c2.firebaseapp.com",
+        projectId: "quotedaily-9e1c2",
+        storageBucket: "quotedaily-9e1c2.appspot.com",
+        messagingSenderId: "101258276527",
+        appId: "1:101258276527:web:360036948e09101fffee5a",
+        measurementId: "G-0366EZJ1MW"
+        };
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+    </script>
 </body>
 </html>
