--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="../src/style.css">
     <title>Quotedaily</title>
 </head>
 
 <body>
-    <script type="module" src="dist/main.js"></script>
+    <script type="module" src="../dist/main.js"></script>
     <div class="content">
         <h1>
             Quotedaily
