--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Quotedaily</title>
 </head>
 
@@ -21,20 +21,5 @@
             <div id="author" class="author"></div>
         </div>
     </div>
-    <script>
-        import { initializeApp } from "firebase/app";
-        import { getAnalytics } from "firebase/analytics";
-        const firebaseConfig = {
-        apiKey: "AIzaSyA2UTUsENZYy-Unuf7TirzcfPmDRsQJ93w",
-        authDomain: "quotedaily-9e1c2.firebaseapp.com",
-        projectId: "quotedaily-9e1c2",
-        storageBucket: "quotedaily-9e1c2.appspot.com",
-        messagingSenderId: "101258276527",
-        appId: "1:101258276527:web:360036948e09101fffee5a",
-        measurementId: "G-0366EZJ1MW"
-        };
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-    </script>
 </body>
 </html>
