--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script type="module" src="../dist/main.js"></script>
+    <script type="module" src="./dist/main.js"></script>
     <div class="content">
         <h1>
             Quotedaily
